Add exploit that cause the qualcomn phone to hang

--- a/configs/config-srsran-n41-20MHz.conf
+++ b/configs/config-srsran-n41-20MHz.conf
@@ -66,4 +66,5 @@ module = modules/lib_dummy.so
 # module = modules/lib_mac_sch_mtk_rrc_setup_crash_4.so
 # module = modules/lib_mac_sch_mtk_rrc_setup_crash_6.so
 # module = modules/lib_mac_sch_mtk_rrc_setup_crash_7.so
+# module = modules/lib_mac_sch_rrc_setup_crash_var.so
 # module = modules/lib_plaintext_registration_accept.so
